logs/full_test_20260330_181816.log
  File "/home/huawei/.openclaw/workspace/tianyuan-mhf-fno/benchmark/full_comparison_test.py", line 33
    device = torch.device('cuda' if torch.cuda.is_available() else torch.device('cpu')
                         ^
SyntaxError: '(' was never closed
